Fixed the createBacklogItem dialog so that the selected theme list gets reseted only if newly selected backlog is not under same product. Also fixed some layout issues in themeChooser dialog.
git-svn-id: http://agilefant.googlecode.com/svn/trunk@1635 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -1188,3 +1188,7 @@ select.statusSelect option {
 	margin: 7px 0 0 5px;
 }
 
+.buttonsTable {
+	width: 95%;
+}
+
